[package]
name = "bollard"
description = "An asynchronous Docker daemon API"
version = "0.9.0"
authors = [ "Bollard contributors" ]
license = "Apache-2.0"
homepage = "https://github.com/fussybeaver/bollard"
repository = "https://github.com/fussybeaver/bollard"
documentation = "https://docs.rs/bollard"
readme = "README.md"
keywords = ["docker"]
edition = "2018"

[features]
# Enable tests specifically for the http connector
test_http = []
# Enable tests specifically for rustls
test_ssl = ["ssl"]
# Enable tests specifically for macos
test_macos = []
# Enable rustls / ssl
ssl = ["hyper-rustls", "rustls", "rustls-native-certs", "webpki-roots"]

[dependencies]
base64 = "0.12.3"
bollard-stubs = { version = "1.40.6" }
bytes = "1.0.0"
chrono = { version = "0.4.11", features = ["serde"] }
ct-logs = "0.7.0"
dirs-next = "1.0.2"
futures-core = "0.3.9"
futures-util = "0.3.9"
hex = "0.4.2"
http = "0.2.1"
hyper = { version = "0.14.2", features = ["stream", "client", "http1", "tcp"] }
hyper-rustls = { version = "0.22.1", optional = true }
log = "0.4.11"
pin-project = "0.4.22"
rustls = { version = "0.19.0", optional = true }
rustls-native-certs = { version = "0.5.0", optional = true }
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.55"
serde_urlencoded = "0.6.1"
tokio = { version = "1.0", features = ["time", "fs"] }
thiserror = "1.0"
tokio-util = { version = "0.6.0", features = ["codec"] }
url = "2.2.0"
webpki-roots = { version = "0.21.0", optional = true }

[dev-dependencies]
env_logger = "0.7.1"
flate2 = "1.0.14"
tar = "0.4.29"

[target.'cfg(unix)'.dependencies]
hyperlocal =  { version = "0.8.0" }

[target.'cfg(windows)'.dependencies]
mio-named-pipes = "0.1.6"
winapi = "0.3.9"
